--- a/config/locales/summary.en.yml
+++ b/config/locales/summary.en.yml
@@ -9,6 +9,7 @@ en:
         family_name: Family name
         forenames: Forename(s)
         date_of_birth: Date of birth
+        age: Age
         sex: Sex
         prison_number: Prison number
         nationality: Nationality
