fixup! Implement date_of_birth coercion and validation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,7 +28,7 @@ en:
   activemodel:
     errors:
       models:
-        escort:
+        identification:
           attributes:
             date_of_birth:
               invalid: Enter the date of birth in the correct format (DD/MM/YYYY)
