Coerce & validate dates
Allows dates to be coerced correctly and provides a method
for displaying incorrect dates back to the user via a
presenter method.

Adds a class `date` method that handles configuring the
date attribute, validation, coercion & presentation on
the Virtus backed form objects.

This commit introduces translations to the form objects.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,3 +24,11 @@ en:
         label: Sex
         male_label: Male
         female_label: Female
+
+  activemodel:
+    errors:
+      models:
+        identification:
+          attributes:
+            date_of_birth:
+              invalid: is invalid
