Add the risks section into the navigation menu
TODO: The sections do not belong in the application
helper - they should be accessible from the form
instead.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
     heading: Primary navigation
     identification: Identification
     summary: Summary
+    risks: Risks
   shared:
     risk:
       types:
