--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,8 @@
 en:
   current_phase: BETA
   phase_message: This is a new service – your feedback will help us to improve it.
+  "yes": "Yes"
+  "no": "No"
   navigation:
     heading: Primary navigation
     identification: Identification
