--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,25 +13,33 @@ en:
       types:
         to_self:
           title: Risks to self
-          help_text: Help copy lorem ipsum dolor
-          details_help_text: Give the details of risk, including incidents, behaviour and triggers
+          help_text: Is this individual at risk of sucide or self-harm?
+          details_help_text: 
+          - Give details of any incident of attempted suicide or self-harm, including the method, circumstances, date and triggers.
+          - Give details on any incident where the individual threated to commit suicide or self harm, including the cirucmstances, date and triggers around the incident and the method threatened.
+          - Give details if indiivual is / has recently been on an open ACCT Plan, or has had any PNC warning markers for suicide / self-harm in last six months
+          - Give details of any other reason which may indiciate a risk of suicide or self-harm (including whether an indiivuals cases involve an offence against a family member, is an unexpected recall, exhbits bizzare behaviour)
         to_others:
           title: Risks to others
           help_text: Help copy lorem ipsum dolor
           details_help_text: Give the details of risk, including incidents, behaviour and triggers
         violence:
           title: Violence
-          help_text: Help copy lorem ipsum dolor
-          details_help_text: Give the details of risk, including incidents, behaviour and triggers
+          help_text: Does this individual have any relevant history of violence, actual or threatened?
+          details_help_text: - Give details of any incident of violence, actual or threatened, including the method, date, circumstances and triggers.
+          - Give details of any risk of violence to specific groups such as women/children/minority ethnic groups and Police/Prison/Private contractors.
+          -Give details on any known risks that the indiivdual may pose to others if shared into shared cellular accomodation (consult any existing Cell Sharing Risk Assessments)
+          the details of risk, including incidents, behaviour and triggers
         from_others:
           title: Risk from others
           help_text: Help copy lorem ipsum dolor
           details_help_text: Give the details of risk, including incidents, behaviour and triggers
         escape:
-          title: Escort escape risk
-          help_text: Help copy lorem ipsum dolor
-          details_help_text: Give the details of risk, including incidents, behaviour and triggers
-        intolerant_behaviour:
+          title: Escape risk
+          help_text: Is this individual an escape risk? 
+          details_help_text: - Give details of any history of escape attempts (including the method, circumstances and triggers of the escape)
+          - Give details of any intelligence that suggests an escape attempt is likely (including any known method and circumstances)
+          - Give details if this individual is on the prison 'E list'
           title: Intolerant behavior
           help_text: Help copy lorem ipsum dolor
           details_help_text: Give the details of risk, including incidents, behaviour and triggers
