Update personal details to reflect latest design
Introduces a number of changes to accommodate changes to the
design since the last sprint.§

--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -34,7 +34,7 @@ en:
       cover_sheet: Cover sheet
       date_of_travel: Date of travel
       protective_marking: Official - Sensitive
-      photo_message: Attach photo if available
+      photo_message: Attach photo
       family_name: :'shared.family_name'
       forenames: :'shared.forenames'
       dob: :'shared.date_of_birth'
