--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -2,6 +2,9 @@ en:
   pdfs:
     header:
       title: Person Escort Record - cover sheet
+    nfr:
+      marker_label: Not for release
+      reason: Reason
     prisoner_information:
       copy_type: Master
       cover_sheet: Cover sheet
