--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -1,7 +1,10 @@
 en:
   pdfs:
     header:
-      title: Person Escort Record - cover sheet
+      title: Person Escort Record
+      heading: A1. Cover sheet
+      vehicle_registration: Vehicle registration
+      vehicle_cell_number: Vehicle cell no.
     nfr:
       marker_label: Not for release
       reason: Reason
