Add footer using PDFKit
Adds a footer containing the protective marking and page numbers
using the meta tag functionality provided by PDFKit.

--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -5,6 +5,9 @@ en:
       heading: A1. Cover sheet
       vehicle_registration: Vehicle registration
       vehicle_cell_number: Vehicle cell no.
+    footer:
+      page_number: '[page] of [topage]'
+      protective_marking: Official - Sensitive
     nfr:
       marker_label: Not for release
       reason: Reason
