Add CRO & PNC Numbers to the identification form

--- a/config/locales/identification.en.yml
+++ b/config/locales/identification.en.yml
@@ -6,6 +6,8 @@ en:
         forenames: Forenames
         family_name: Family name
         nationality: Nationality
+        cro_number: CRO number
+        pnc_number: PNC number
   escorts:
     identification:
       heading: Prisoner information
