Add CRO & PNC output to the PDF form

--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -13,3 +13,5 @@ en:
       sex: Sex
       nationality: Nationality
       prison_number: Prison number
+      cro_number: CRO Number
+      pnc_number: PNC Number
