Add handover details heading and fit to travel
Adds these two sections and refactors the inline-* helper
classes to better support reuse.

--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -93,3 +93,9 @@ en:
       license_recall: License recall
       offence: Offence
       offence_status: Offence status
+    handover_details:
+      heading: B1. Handover details
+      fit_to_travel: Fit to travel
+      name_of_healthcare_professional: Name of healthcare professional (print)
+      signature: Signature
+      role: Role
