--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,7 @@ en:
   phase_message: This is a new service – your feedback will help us to improve it.
   "yes": "Yes"
   "no": "No"
+  sign_out: Sign out
   flash:
     escorts:
       success:
