Style Devise forms
Introduces styling classes for authentication form and adds CSS
to manage the 'sign out' link. Also moves copy to locale files.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,9 @@ en:
   "yes": "Yes"
   "no": "No"
   sign_out: Sign out
+  log_in: Log in
+  forgot_password: Forgot your password?
+  reset_password: Reset password
   flash:
     escorts:
       success:
