Changes case of 'Official - sensitive' in locale
Now uppercased in locale file rather than being transformed by
Ruby.

--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -7,7 +7,7 @@ en:
       vehicle_cell_number: Vehicle cell no.
     footer:
       page_number: '[page] of [topage]'
-      protective_marking: Official - Sensitive
+      protective_marking: OFFICIAL - SENSITIVE
     nfr:
       marker_label: Not for release
       reason: :'shared.reason'
