--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -61,7 +61,7 @@ en:
       prohibited_items: Prohibited items
       non_association: Non-association
       completed_by: Name of person filling in this section
-      signature: Signature
+      signature: :'shared.signature'
     healthcare_needs:
       heading: A3. Healthcare information
       physical_health_risks: Physical health risks
@@ -147,8 +147,48 @@ en:
       medication: Medication
       property: Property
       starting_location: Starting location
-      name_label: Name (print)
+      name_label: :'shared.name'
       signature_label: Signature
       contact_number: Contact number
       escort_label: Escort
       destination_label: Destination
+    checks_and_events:
+      heading: B3. Record of checks and significant events
+      time: Time
+      details: Details
+      initials: Initials
+      tick_and_last: Tick and sign if this is the last page of the record
+      tick_and_complete: Tick if the record continues on a separate sheet
+      this_is_sheet: This is sheet
+      of: of
+    checks_and_events_initial:
+      heading: :'pdfs.checks_and_events.heading'
+      checks_and_significant_events: Checks and significant events
+      time: :'pdfs.checks_and_events.time'
+      name: :'shared.name'
+      details: :'pdfs.checks_and_events.details'
+      initials: :'pdfs.checks_and_events.initials'
+      prisoner_identified:  Prisoner identified
+      searched:  Searched (state level)
+      escort_briefed:  Escort fully briefed (including risks)
+      searched_by_contractor:  Searched by Contractor (state level)
+      tick_and_last: :'pdfs.checks_and_events.tick_and_last'
+      tick_and_complete: :'pdfs.checks_and_events.tick_and_complete'
+      this_is_sheet: :'pdfs.checks_and_events.this_is_sheet'
+      of: :'pdfs.checks_and_events.of'
+      signature: :'shared.signature'
+    checks_and_events_continuation:
+      heading: :'pdfs.checks_and_events.heading'
+      escort_checks_and_significant_events: Escort checks and significant events
+      highlight_current_risk: Tick this column if the event highlights a current risk, and update cover sheet with the information
+      noting_details: When noting any significant events give details of behaviour, context and any triggers
+      time: :'pdfs.checks_and_events.time'
+      name: :'shared.name'
+      details: :'pdfs.checks_and_events.details'
+      initials: :'pdfs.checks_and_events.initials'
+      tick_and_last: :'pdfs.checks_and_events.tick_and_last'
+      tick_and_complete: :'pdfs.checks_and_events.tick_and_complete'
+      this_is_sheet: :'pdfs.checks_and_events.this_is_sheet'
+      of: :'pdfs.checks_and_events.of'
+      signature: :'shared.signature'
+
