Add a move information form

--- a/config/locales/_shared.en.yml
+++ b/config/locales/_shared.en.yml
@@ -3,14 +3,17 @@ en:
     age: Age
     cro_number: CRO number
     date_of_birth: Date of birth
+    day_label: Day
     family_name: Family name
     forenames: Forenames
+    medication: Medication
+    month_label: Month
+    name: Name (print)
     nationality: Nationality
     pnc_number: PNC number
     prison_number: Prison number
     prisoner_information_heading: Prisoner Information
-    sex: Sex
     reason: Reason
-    medication: Medication
-    name: Name (print)
+    sex: Sex
     signature: Signature
+    year_label: Year
