--- a/config/locales/risks.en.yml
+++ b/config/locales/risks.en.yml
@@ -23,7 +23,7 @@ en:
           help_text: Is there an escape risk?
           details_help_text: Give details of whether the prisoner is on the prison E list, or any intelligence that suggests an escape risk. Include known dates and triggers.
         intolerant_behaviour:
-          title: Intolerant behavior towards others
+          title: Intolerant behaviour towards others
           help_text: Is there a history of intolerant behaviour towards others, such as sexism, homophobia or racism?
           details_help_text: Give details of any incidents or threats, or offence related indicators. Include known dates and triggers.
         prohibited_items:
