Validate date of travel on move
It is acceptable for a move date to be provided that
is either todays date or in the future. It is also
acceptable for a date to be empty. Dates provided
that are in the past are invalid and should be flagged
to the user.

--- a/config/locales/move_information.en.yml
+++ b/config/locales/move_information.en.yml
@@ -21,4 +21,5 @@ en:
         move_information:
           attributes:
             date_of_travel:
-              invalid: invalid date of tarvel
+              invalid: invalid date of travel
+              inclusion: cannot be in the past
