--- a/config/locales/move_information.en.yml
+++ b/config/locales/move_information.en.yml
@@ -2,15 +2,15 @@ en:
   helpers:
     label:
       move_information:
-        origin: From
-        destination: To
+        origin: :'shared.origin'
+        destination: :'shared.destination'
         reason: Reason for move(current offence)
   escorts:
     move_information:
-      heading: Move Information
+      heading: :'shared.move_information_heading'
       default_origin: HMP Bedford
       date_of_travel:
-        label: Date of travel
+        label: :'shared.date_of_travel'
         hint: eg, %{today}
         day_label: :'shared.day_label'
         month_label: :'shared.month_label'
