Change 'Reason to move' label
Amends text and moves to shared locale file for use across
templates.

--- a/config/locales/summary.en.yml
+++ b/config/locales/summary.en.yml
@@ -20,4 +20,4 @@ en:
         origin: :'shared.origin'
         destination: :'shared.destination'
         date_of_travel: :'shared.date_of_travel'
-        reason: Reason for move
+        reason: :'shared.reason_for_move'
