--- a/config/locales/identification.en.yml
+++ b/config/locales/identification.en.yml
@@ -28,3 +28,4 @@ en:
           attributes:
             date_of_birth:
               invalid: is invalid
+              out_of_range: is out of range, a person should be between %{min} and %{max} years old
