--- a/config/locales/move_information.en.yml
+++ b/config/locales/move_information.en.yml
@@ -21,5 +21,5 @@ en:
         move_information:
           attributes:
             date_of_travel:
-              invalid: invalid date of travel
-              inclusion: cannot be in the past
+              invalid: invalid date provided
+              in_the_past: cannot be in the past
