Change Identification to PrisonerInformation

--- a/config/locales/navigation.en.yml
+++ b/config/locales/navigation.en.yml
@@ -1,7 +1,7 @@
 en:
   navigation:
     heading: Primary navigation
-    identification: Identification
+    prisoner_information: Prisoner Information
     summary: Summary
     risks: Risks
     move_information: Move Information
