Introduce a healthcare form to the user flow

--- a/config/locales/navigation.en.yml
+++ b/config/locales/navigation.en.yml
@@ -5,6 +5,7 @@ en:
     summary: Summary
     risks: Risks
     move_information: Move Information
+    healthcare: Healthcare
   quick_actions:
     heading: Quick actions
     preview: Preview PER
