Introduce form helper and fix date validation
Commit will:

* Add form helper module with methods to manage date rendering
* Fix date validation presentation issues within module methods
* Link validation flash to related input
* Refactor 'move' and 'prisoner' information to use module helper
  methods.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,3 +16,16 @@ en:
   escorts:
     show:
       save: Save
+  shared:
+    date_of_travel_inputs:
+      hint: eg, %{today}
+      label: :'shared.date_of_travel'
+      day_label: :'shared.day_label'
+      month_label: :'shared.month_label'
+      year_label: :'shared.year_label'
+    date_of_birth_inputs:
+      hint: eg 01 01 1999
+      label: :'shared.date_of_birth'
+      day_label: :'shared.day_label'
+      month_label: :'shared.month_label'
+      year_label: :'shared.year_label'
