--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -71,18 +71,14 @@ en:
       allergies: Allergies
       disabilities: Disabilities
       mpv_required: Tick if MPV required
-    shared:
-      identifiers_label: PNC / Prison number
-    medication:
-      title: :'shared.medication'
-      instructions: 'Medication handover details in section B1: Record of handover'
-      description: Medication description
-      administration_information: Medication administration information
-    healthcare_updates:
+      medication_title: :'shared.medication'
+      medication_instructions: 'Medication handover details in section B1: Record of handover'
       completed_by: Name of medical professional filling in this section
       phone_number: Contact phone number
       updates: Updates
       update_instructions: This section should be completed by a medical professional
+    shared:
+      identifiers_label: PNC / Prison number
     offences:
       heading: A4. Offences
       instructions: See A1. Cover sheet for details of current offence
