Introduce an offences form to the user flow

--- a/config/locales/navigation.en.yml
+++ b/config/locales/navigation.en.yml
@@ -6,6 +6,7 @@ en:
     risks: Risks
     move_information: Move Information
     healthcare: Healthcare
+    offences: Offences
   quick_actions:
     heading: Quick actions
     preview: Preview PER
