Update front page markers to reflect new designs
Placement and styling of this component changed to reflect new design.

--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -21,7 +21,7 @@ en:
       risks:
         title: Risks overview
         notes: Section A2 Risk summary
-        violence: Violence and risk to others
+        violence: Violence
         escape: Escort escape risk
         allergies: Allergies
         disabilities: Disabilities
