Add ability to set whether an ACCT is open or not

--- a/config/locales/risks.en.yml
+++ b/config/locales/risks.en.yml
@@ -3,6 +3,8 @@ en:
     risks:
       heading: Risks
   risk:
+    open_acct:
+      title: Does the prisoner have an open ACCT?
     to_self:
       title: Risks to self
       help_text: Is there a risk of suicide or self-harm?
